# Pinax-Camera-Model

./: LICENSE.md  README.md
MATLAB/: Water_Refraction_Index_Empirical_Eqn.m
MATLAB/Correct_Underwater_Images/: CorrectImages.py
MATLAB/Find_correction_map/: FindMap.m
depth_estimation/: CMakeLists.txt  package.xml
depth_estimation/launch/: pinax_depth_estimation.launch
depth_estimation/scripts/: depth.py  integrated.py
depth_estimation/scripts/maps/: MapX_left.txt  MapX_right.txt  MapY_left.txt  MapY_right.txt
