<package format="2">
  <name>depth_estimation</name>
  <version>0.0.1</version>
  <description>The perception package</description>

  <maintainer email="you@example.com">Hussein</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend>message_generation</build_depend>-->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!--<exec_depend>message_runtime</exec_depend>-->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>

